# acinerella

./: .clang-format  .gitignore  CMakeLists.txt  FindFFMPEG.cmake  README.md  clean.sh
CMakeModules/: FindFFMPEG.cmake
cmake/: FindFFMPEG.cmake
header/pascal/: acinerella.pas
header/pascal/demo/: acinerella_demo.bdsproj  acinerella_demo.dpr  acinerella_demo.lpi
src/: CMakeLists.txt  acinerella.c  acinerella.h  config.h  config.h.in  demo.c  makefile  test.c
